syntax = "proto3";

package org.project_planton.app.cloudresource.v1;

import "google/protobuf/timestamp.proto";

// CloudResource represents a cloud resource.
message CloudResource {
  // Unique identifier for the cloud resource.
  string id = 1;

  // The name of the cloud resource.
  string name = 2;

  // The kind of the cloud resource (e.g., "CivoVpc", "AwsRdsInstance").
  string kind = 3;

  // The full YAML manifest content.
  string manifest = 4;

  // Timestamp when the resource was created.
  google.protobuf.Timestamp created_at = 5;

  // Timestamp when the resource was last updated.
  google.protobuf.Timestamp updated_at = 6;
}
